--- a/src/components/header.scss
+++ b/src/components/header.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: row;
   letter-spacing: 0.5rem;
+  justify-content: space-between;
   margin-bottom: 7px;
   font-size: 18px;
   font-weight: 700;
@@ -10,6 +11,9 @@
   }
 }
 
+.titleAndLogo {
+  display: flex;
+}
 .titleWrapper {
   display: flex;
   align-items: center;
@@ -17,6 +21,25 @@
 
 .imageLogo {
   width: 50px;
+}
+
+.mobile {
+  display: none;
+}
+.bi {
+  width: 30px;
+}
+.mobileLogos {
+  align-items: center;
+  display: flex;
+  > a {
+    color: inherit;
+    text-decoration: inherit;
+    > svg {
+      width: 35px;
+      padding: 7px;
+    }
+  }
 }
 
 @media (max-width: 767.98px) {
@@ -31,5 +54,7 @@
   .imageLogo {
     width: 30px;
   }
-  
+  .mobile {
+    display: flex;
+  }
 }
